--- a/getinvolved.html
+++ b/getinvolved.html
@@ -82,7 +82,7 @@
               </p>
               <p>
                 You can also support us by donating items of interest to the
-                museum’s collections. If you have some item or collection that
+                museum's collections. If you have some item or collection that
                 you think others would enjoy, please let us know by contacting
                 our Collections Department and they will be able to assist you.
               </p>
@@ -105,7 +105,7 @@
               </p>
               <p>
                 You can help volunteer in a number of different spheres. Please
-                contact us if you’d like to find out more about how you can get
+                contact us if you'd like to find out more about how you can get
                 involved.
               </p>
             </article>
@@ -136,7 +136,7 @@
                 at the museum.
               </p>
               <p>
-                You’ll be learning from a number of different academics and
+                You'll be learning from a number of different academics and
                 people who are passionate about science and sharing it with the
                 wider community.
               </p>
@@ -144,7 +144,7 @@
           </article>
         </div>
       </section>
-      <figure class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehover">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
