--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </article>
         </section>
         <h2 class="h2-center">"Explore Together</h2>
-        <section class="link-row imagehov">
+        <section class="link-row imagehover">
           <div class="link">
             <h2>Explore</h2>
             <a href="explore.html">
@@ -154,12 +154,12 @@
               different exhibits on the many varied subjects of science to
               explore. Many of these exhibits are designed for you to interact
               with and play around to see science come to life (apart from the
-              dinosaur exhibits – they only come to life at night when
-              everyone’s gone home).
+              dinosaur exhibits - they only come to life at night when
+              everyone's gone home).
             </p>
           </article>
         </section>
-        <figure class="back-to-top-button imagehov">
+        <figure class="back-to-top-button imagehover">
           <a href="#back-to-top">
             <img
               src="Images/Design/Back-to-the-top-Button.png"
