--- a/visit.html
+++ b/visit.html
@@ -88,12 +88,12 @@
           <article class="textfield-blue hours">
             <h2>Hours</h2>
             <span>Monday: Closed</span>
-            <span>Tuesday: 10:00 – 16:00</span>
-            <span>Wednesday: 10:00 – 16:00</span>
-            <span>Thursday: 10:00 – 16:00 </span>
-            <span>Friday: 10:00 – 19:00</span>
-            <span>Saturday: 9:00 – 16:00</span>
-            <span>Sunday: 9:00 – 13:00</span>
+            <span>Tuesday: 10:00 - 16:00</span>
+            <span>Wednesday: 10:00 - 16:00</span>
+            <span>Thursday: 10:00 - 16:00 </span>
+            <span>Friday: 10:00 - 19:00</span>
+            <span>Saturday: 9:00 - 16:00</span>
+            <span>Sunday: 9:00 - 13:00</span>
           </article>
         </section>
         <figure class="divider">
@@ -134,7 +134,7 @@
             <p>
               Our shop offers a range of memorabilia from the museum as well as
               great gifts and activity packs that allow you to continue to
-              explore science even after you’ve left the museum.
+              explore science even after you've left the museum.
             </p>
           </article>
         </section>
@@ -205,7 +205,7 @@
           </div>
         </form>
       </div>
-      <figure class="back-to-top-button imagehov">
+      <figure class="back-to-top-button imagehover">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
