--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <header>
       <div class="wrapper">
         <section class="header-section">
-          <figure class="header-logo">
+          <div class="header-logo">
             <img
               src="Images/Design/Logo.png"
               alt="Logo for Brønnøysund Community Science Museum"
             />
-          </figure>
+          </div>
           <input type="checkbox" id="menu-checkbox" />
           <label for="menu-checkbox" class="hamburger-icon"
             ><img
