--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </p>
           </article>
         </section>
-        <h2 class="h2-center">"Explore Together</h2>
+        <h2 class="h2-center">"Explore Together"</h2>
         <section class="link-row imagehover">
           <div class="link">
             <h2>Explore</h2>
