--- a/visit.html
+++ b/visit.html
@@ -148,7 +148,7 @@
         <h3 class="center-text">
           Please contact us if you have any questions or feedback
         </h3>
-        <form method="POST">
+        <form method="GET">
           <div class="contact-form">
             <section class="fieldset">
               <label for="name">Name</label>
