--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       href="https://fonts.googleapis.com/css2?family=Barriecito&family=Cabin+Sketch&family=Indie+Flower&family=Lora&family=Pacifico&family=Vollkorn+SC:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Homepage</title>
   </head>
@@ -34,10 +35,12 @@
       <div class="wrapper">
         <section class="header-section">
           <div class="header-logo">
-            <img
-              src="Images/Design/Logo.png"
-              alt="Logo for Brønnøysund Community Science Museum"
-            />
+            <a href="index.html">
+              <img
+                src="Images/Design/Logo.png"
+                alt="Logo for Brønnøysund Community Science Museum"
+              />
+            </a>
           </div>
           <input type="checkbox" id="menu-checkbox" />
           <label for="menu-checkbox" class="hamburger-icon"
@@ -188,10 +191,12 @@
             </div>
           </div>
           <div class="footer2">
-            <img
-              src="Images/Design/Logo.png"
-              alt="Logo for Brønnøysund Community Science Museum"
-            />
+            <a href="index.html">
+              <img
+                src="Images/Design/Logo.png"
+                alt="Logo for Brønnøysund Community Science Museum"
+              />
+            </a>
           </div>
           <div class="footer3">
             <img src="Images/Icons/facebook-icon.png" alt="Facebook Icon" />
