--- a/visit.html
+++ b/visit.html
@@ -181,6 +181,23 @@
                 placeholder="test@mail.com"
                 required
               />
+              <label for="reason-for-contact">Reason for contact</label>
+              <select
+                type="reason-for-contact"
+                name="reason-for-contact"
+                id="reason-for-contact"
+                class="form-input"
+              >
+                <option value="option-1">...</option>
+                <option value="option-2">
+                  I have a questions about one of your exhibitions
+                </option>
+                <option value="option-3">
+                  I have feedback regarding a tour
+                </option>
+                <option value="option-4">I want to book a class tour</option>
+                <option value="option-5">Other</option>
+              </select>
               <label for="newsletter"
                 >Would you like to sign up for our newsletter?</label
               >
