--- a/explore.html
+++ b/explore.html
@@ -26,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/imports/explore.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Explore</title>
