--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/imports/homepage.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Homepage</title>
