--- a/events.html
+++ b/events.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-    name="description"
-    content="Take a look at some of the special events coming to Brønnøysund Community Science Museum. We have events for all age groups."
-  />
+      name="description"
+      content="Take a look at some of the special events coming to Brønnøysund Community Science Museum. We have events for all age groups."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -74,11 +74,16 @@
               <img
                 src="Images/Events/events-professor-min.jpg"
                 alt="Picture of professor of aeronautics Prof Sheila Widnall"
-                />
+              />
             </figure>
             <article class="text">
               <h3>Visiting Professor of Aeronautics</h3>
-              <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
+              <p>
+                It is our pleasure to announce that Prof Sheila Widnall from the
+                Massachusetts Institute of Technology will be delivering 3
+                lectures on the development of aeronautics and where the future
+                lies in this exciting ‘space’.
+              </p>
             </article>
           </div>
         </div>
@@ -88,12 +93,17 @@
           <div class="container">
             <article class="text">
               <h3>Night in the Museum</h3>
-              <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
+              <p>
+                Get your family together for an exciting night in the museum as
+                you sleep over beside dinosaurs and science displays. Bring your
+                own sleeping bag and get ready to rough it as we go exploring
+                the wonders of science.
+              </p>
             </article>
             <figure class="image">
               <img
-              src="Images/Events/events_night-at-the-museum-min.png"
-              alt="Picture of a man sitting in a museum hall"
+                src="Images/Events/events_night-at-the-museum-min.png"
+                alt="Picture of a man sitting in a museum hall"
               />
             </figure>
           </div>
@@ -106,24 +116,30 @@
               <img
                 src="Images/Events/events-lightning-min.jpg"
                 alt="Picture of a ball of lightning"
-                />
+              />
             </figure>
             <article class="text">
               <h3>Energetica Exhibition on Loan</h3>
-              <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It's a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
+              <p>
+                On loan from the NEMO Science Museum in Amsterdam, the
+                Energetica exhibition is coming to the Community Science Museum.
+                It's a series of installations that allow visitors to experience
+                the power of the elements as we harness them. From solar energy
+                powering lighting, to ‘Wind Island’ that shows how turbines are
+                able to use and control wind to create power.
+              </p>
             </article>
           </div>
         </div>
       </section>
-        <figure class="back-to-top-button imagehover"> 
-          <a href="#back-to-top">
-            <img
-              src="Images/Design/Back-to-the-top-Button.png"
-              alt="Back to the top button"
-            />
-          </a>
-        </figure>
-      </div>
+      <figure class="back-to-top-button imagehover">
+        <a href="#back-to-top">
+          <img
+            src="Images/Design/Back-to-the-top-Button.png"
+            alt="Back to the top button"
+          />
+        </a>
+      </figure>
     </main>
     <footer>
       <div class="wrapper">
