--- a/explore.html
+++ b/explore.html
@@ -101,11 +101,11 @@
       </div>
       <section class="blue-background">
         <div class="wrapper">
-          <hgroup class="center-text">
+          <div class="center-text">
             <h2 id="for-kids">For Kids</h2>
             <h3>Are you a young person looking to learn more about science?</h3>
             <h3>Come on down to our museum, there's plenty to see and do.</h3>
-          </hgroup>
+          </div>
           <section class="iandt">
             <figure class="img-and-text image">
               <img
