--- a/getinvolved.html
+++ b/getinvolved.html
@@ -62,7 +62,7 @@
     <main>
       <div class="hero-image" id="back-to-top">
         <img
-          src="Images/Get Involved/get-involved_hero-min.jpg"
+          src="Images/Get-Involved/get-involved_hero-min.jpg"
           alt="Picture of glass windows in tall buildings taken from the ground up"
         />
       </div>
@@ -73,7 +73,7 @@
           <article class="container">
             <figure class="image">
               <img
-                src="Images/Get Involved/get-involved_support-min.jpg"
+                src="Images/Get-Involved/get-involved_support-min.jpg"
                 alt="Picture of a typewriter with the word Donation printed out"
               />
             </figure>
@@ -114,7 +114,7 @@
             </article>
             <figure class="image">
               <img
-                src="Images/Get Involved/get-involved_volunteer-min.jpg"
+                src="Images/Get-Involved/get-involved_volunteer-min.jpg"
                 alt="Picture of a man standing in front of a dinosaur exhibition"
               />
             </figure>
@@ -127,7 +127,7 @@
           <article class="container">
             <figure class="image">
               <img
-                src="Images/Get Involved/get-involved_interns-min.jpg"
+                src="Images/Get-Involved/get-involved_interns-min.jpg"
                 alt="Picture of 5 people sitting on a bench and smiling with their hands around each other"
               />
             </figure>
