--- a/visit.html
+++ b/visit.html
@@ -70,13 +70,13 @@
       <h1>Visit</h1>
       <div class="wrapper">
         <section class="iandt visit">
-          <address class="textfield-blue location">
+          <div class="textfield-blue location">
             <h2>Location</h2>
             <p>The museum is located at:</p>
             <span>Fictional Street 1</span>
             <span>8907 Brønnøysund</span>
             <span>NO-Norway</span>
-          </address>
+          </div>
           <article class="textfield-blue admission">
             <h2>Admission</h2>
             <p>
@@ -184,7 +184,6 @@
               />
               <label for="reason-for-contact">Reason for contact</label>
               <select
-                type="reason-for-contact"
                 name="reason-for-contact"
                 id="reason-for-contact"
                 class="form-input"
