--- a/events.html
+++ b/events.html
@@ -26,6 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/imports/events.css" />
     <link rel="stylesheet" href="css/media.css" />
     <link rel="icon" href="Images/Icons/home-icon.png" />
     <title>B.C.S.M | Events</title>
@@ -77,7 +78,7 @@
               />
             </figure>
             <article class="text">
-              <h3>Visiting Professor of Aeronautics</h3>
+              <h2 class="events-h2">Visiting Professor of Aeronautics</h2>
               <p>
                 It is our pleasure to announce that Prof Sheila Widnall from the
                 Massachusetts Institute of Technology will be delivering 3
@@ -92,7 +93,7 @@
         <div class="wrapper">
           <div class="container">
             <article class="text">
-              <h3>Night in the Museum</h3>
+              <h2 class="events-h2">Night in the Museum</h2>
               <p>
                 Get your family together for an exciting night in the museum as
                 you sleep over beside dinosaurs and science displays. Bring your
@@ -119,7 +120,7 @@
               />
             </figure>
             <article class="text">
-              <h3>Energetica Exhibition on Loan</h3>
+              <h2 class="events-h2">Energetica Exhibition on Loan</h2>
               <p>
                 On loan from the NEMO Science Museum in Amsterdam, the
                 Energetica exhibition is coming to the Community Science Museum.
