--- a/exhibition.html
+++ b/exhibition.html
@@ -159,7 +159,7 @@
           <figure class="img-and-text image">
             <img
               src="Images/Exhibition/exhibition_evolution3-min.jpg"
-              alt="Picture of three skeletons showing evolution of man"
+              alt="Picture of an ancient amphibious create"
             />
             <p>"Prehistoric marine life "</p>
           </figure>
