--- a/explore.html
+++ b/explore.html
@@ -117,21 +117,21 @@
             <figure class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids2-min.jpg"
-                alt="Picture of three potions on a table"
+                alt="Picture of toys and learning tools for kids"
               />
               <p>Lots of learning activities for kids</p>
             </figure>
             <figure class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids3-min.jpg"
-                alt="Picture of three potions on a table"
+                alt="Picture of a Mammoth skeleton from our Ice Age exhibit"
               />
               <p>Old Friend from the Ice Age movies</p>
             </figure>
             <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids4-min.jpg"
-                alt="Picture of three potions on a table"
+                alt="Picture of three snakes on display"
               />
               <p>“Fake snake in the lake” Exhibition</p>
             </div>
@@ -169,7 +169,7 @@
             <article class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids6-min.jpg"
-                alt="Picture of three potions on a table"
+                alt="The Earth-globe exhibit in the museums main hall"
               />
               <p>
                 Each holiday we pick a new theme to explore. To find out more
