--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a href="explore.html">
               <img
                 src="Images/Home/home_explore-min.jpg"
-                alt="Image of a kid with VR glasses"
+                alt="Image of a child with VR glasses"
               />
             </a>
             <a href="explore.html" class="cta">Find out more</a>
