--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a href="explore.html">
               <img
                 src="Images/Home/home_explore-min.jpg"
-                alt="Image of a child with VR glasses"
+                alt="Image of a child with VR glasses. Click the image to go to the Explore page."
               />
             </a>
             <a href="explore.html" class="cta">Find out more</a>
@@ -108,7 +108,7 @@
             <a href="exhibition.html">
               <img
                 src="Images/Home/home_exhibitions-min.jpg"
-                alt="Image of on of our great exhibitions in the museum"
+                alt="Image of on of our great exhibitions in the museum. Click the image to go to the exhibitions page."
               />
             </a>
             <a href="exhibition.html" class="cta">Find out more</a>
@@ -118,7 +118,7 @@
             <a href="events.html">
               <img
                 src="Images/Home/home_events-min.jpg"
-                alt="Image of a man standing in front of a large museum room"
+                alt="Image of a man standing in front of a large museum room. Click the image to go to the Events page."
               />
             </a>
             <a href="events.html" class="cta">Find out more</a>
@@ -128,7 +128,7 @@
             <a href="visit.html">
               <img
                 src="Images/Home/home_visit-min.jpg"
-                alt="Image of ceiling art from one of the museum's halls"
+                alt="Image of ceiling art from one of the museum's halls. Click the image to go to the Visit page."
               />
             </a>
             <a href="visit.html" class="cta">Find out more</a>
