--- a/exhibition.html
+++ b/exhibition.html
@@ -127,7 +127,7 @@
               framework for exploring and understanding our place in this world.
             </p>
             <img
-              src="Images/Icons/evolution2-icon.svg"
+              src="Images/Icons/evolution2-icon.png"
               alt="Icon showing evolution"
               class="evot-icon"
             />
