--- a/explore.html
+++ b/explore.html
@@ -173,7 +173,8 @@
               />
               <p>
                 Each holiday we pick a new theme to explore. To find out more
-                about the holiday club and how you can join, send us a message.
+                about the holiday club and how you can join,
+                <a href="visit.html">send us a message</a>.
               </p>
             </article>
           </section>
@@ -205,7 +206,8 @@
               will excite and inspire them.
             </p>
             <p>
-              Please get in touch with us here to find out more about our
+              Please get in touch with us
+              <a href="visit.html">here</a> to find out more about our
               facilities and to arrange a time to bring your students through
               for a visit.
             </p>
