--- a/visit.html
+++ b/visit.html
@@ -142,7 +142,7 @@
             </p>
           </article>
         </section>
-        <figure class="divider dt">
+        <figure class="divider dt" id="contact">
           <img
             src="Images/Design/Contact-Skille.png"
             alt="Divider with a contact icon"
