--- a/explore.html
+++ b/explore.html
@@ -34,7 +34,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <section class="header-section">
+        <div class="header-section">
           <div class="header-logo">
             <a href="index.html">
               <img
@@ -57,7 +57,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </section>
+        </div>
       </div>
     </header>
     <main>
@@ -137,7 +137,7 @@
             </div>
           </section>
           <section class="text-container">
-            <article class="textbox">
+            <div class="textbox">
               <p>
                 You can learn about Newtonian physics from our bumper swing, or
                 why not travel back in time and meet our resident Woolly
@@ -145,17 +145,17 @@
                 interested minds, so make sure you come ready to learn and
                 explore.
               </p>
-            </article>
-            <article class="textbox">
+            </div>
+            <div class="textbox">
               <p>
                 We also have the Young Stars club which meets once a week on a
                 Saturday between 10:00 and 13:00 where you'll get to explore and
                 experiment with our team of experts.
               </p>
-            </article>
+            </div>
           </section>
           <section class="iandt">
-            <article class="image-and-text">
+            <div class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids5-min.jpg"
                 alt="Picture of a teenager painting wearing VR-glasses"
@@ -165,8 +165,8 @@
                 you can join other children your age to go on a journey of
                 discovery.
               </p>
-            </article>
-            <article class="image-and-text">
+            </div>
+            <div class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids6-min.jpg"
                 alt="The Earth-globe exhibit in the museums main hall"
@@ -176,7 +176,7 @@
                 about the holiday club and how you can join,
                 <a href="visit.html">send us a message</a>.
               </p>
-            </article>
+            </div>
           </section>
         </div>
       </section>
@@ -197,7 +197,7 @@
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
           </figure>
-          <article class="textfield-grey">
+          <div class="textfield-grey">
             <p>
               As a community-driven museum, we want to work with schools to
               create places of learning and exploring. Our team are on hand to
@@ -211,7 +211,7 @@
               facilities and to arrange a time to bring your students through
               for a visit.
             </p>
-          </article>
+          </div>
         </section>
       </div>
       <figure class="divider" id="for-researchers">
