--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <header>
       <div class="wrapper">
-        <section class="header-section">
+        <div class="header-section">
           <div class="header-logo">
             <a href="index.html">
               <img
@@ -57,7 +57,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </section>
+        </div>
       </div>
     </header>
     <main>
@@ -76,7 +76,7 @@
               alt="Picture showing the museum sign of B.C.S.M."
             />
           </figure>
-          <article class="textfield-purple">
+          <div class="textfield-purple">
             <p>
               Over the course of human history, science has developed from our
               early understanding of fire, wind, water, and earth to exploring
@@ -89,7 +89,7 @@
               a lifelong passion to continue the exploration of the world around
               us.
             </p>
-          </article>
+          </div>
         </section>
         <h2 class="h2-center">"Explore Together"</h2>
         <section class="link-row imagehover">
@@ -151,7 +151,7 @@
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
           </figure>
-          <article class="textfield-purple">
+          <div class="textfield-purple">
             <p>
               We believe science should not be confined to the textbook, but
               brought to life through exhibits. This is why we have over 1000
@@ -161,7 +161,7 @@
               dinosaur exhibits - they only come to life at night when
               everyone's gone home).
             </p>
-          </article>
+          </div>
         </section>
         <figure class="back-to-top-button imagehover">
           <a href="#back-to-top">
