--- a/getinvolved.html
+++ b/getinvolved.html
@@ -33,15 +33,15 @@
   <body>
     <header>
       <div class="wrapper">
-        <section class="header-section">
-          <div class="header-logo">
+        <div class="header-section">
+          <figure class="header-logo">
             <a href="index.html">
               <img
                 src="Images/Design/Logo.png"
                 alt="Logo for Brønnøysund Community Science Museum"
               />
             </a>
-          </div>
+          </figure>
           <input type="checkbox" id="menu-checkbox" />
           <label for="menu-checkbox" class="hamburger-icon"
             ><img
@@ -56,7 +56,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html" id="active">Get Involved</a>
           </nav>
-        </section>
+        </div>
       </div>
     </header>
     <main>
@@ -70,7 +70,7 @@
       <section class="pink-background">
         <div class="wrapper">
           <h2 class="center-text">Support</h2>
-          <article class="container">
+          <div class="container">
             <figure class="image">
               <img
                 src="Images/Get-Involved/get-involved_support-min.jpg"
@@ -90,13 +90,13 @@
                 our Collections Department and they will be able to assist you.
               </p>
             </article>
-          </article>
+          </div>
         </div>
       </section>
       <section class="site-background">
         <div class="wrapper">
           <h2 class="center-text">Volunteer</h2>
-          <article class="container">
+          <div class="container">
             <article class="text">
               <p>
                 A number of people volunteer their time and effort to keep the
@@ -118,13 +118,13 @@
                 alt="Picture of a man standing in front of a dinosaur exhibition"
               />
             </figure>
-          </article>
+          </div>
         </div>
       </section>
       <section class="pink-background">
         <div class="wrapper">
           <h2 class="center-text">Internships</h2>
-          <article class="container">
+          <div class="container">
             <figure class="image">
               <img
                 src="Images/Get-Involved/get-involved_interns-min.jpg"
@@ -144,7 +144,7 @@
                 wider community.
               </p>
             </article>
-          </article>
+          </div>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
@@ -158,7 +158,7 @@
     </main>
     <footer>
       <div class="wrapper">
-        <div class="footer-content">
+        <section class="footer-content">
           <div class="footer1">
             <h2>Contact</h2>
             <div class="footer-contact-icon">
@@ -187,7 +187,7 @@
             <img src="Images/Icons/instagram-icon.png" alt="Instagram Icon" />
             <img src="Images/Icons/youtube-icon.png" alt="Youtube Icon" />
           </div>
-        </div>
+        </section>
         <p class="copy">©SP1 SL23</p>
       </div>
     </footer>
