--- a/explore.html
+++ b/explore.html
@@ -35,14 +35,14 @@
     <header>
       <div class="wrapper">
         <div class="header-section">
-          <div class="header-logo">
+          <figure class="header-logo">
             <a href="index.html">
               <img
                 src="Images/Design/Logo.png"
                 alt="Logo for Brønnøysund Community Science Museum"
               />
             </a>
-          </div>
+          </figure>
           <input type="checkbox" id="menu-checkbox" />
           <label for="menu-checkbox" class="hamburger-icon"
             ><img
@@ -261,7 +261,7 @@
     </main>
     <footer>
       <div class="wrapper">
-        <div class="footer-content">
+        <section class="footer-content">
           <div class="footer1">
             <h2>Contact</h2>
             <div class="footer-contact-icon">
@@ -290,7 +290,7 @@
             <img src="Images/Icons/instagram-icon.png" alt="Instagram Icon" />
             <img src="Images/Icons/youtube-icon.png" alt="Youtube Icon" />
           </div>
-        </div>
+        </section>
         <p class="copy">©SP1 SL23</p>
       </div>
     </footer>
