--- a/events.html
+++ b/events.html
@@ -34,15 +34,15 @@
   <body>
     <header>
       <div class="wrapper">
-        <section class="header-section">
-          <div class="header-logo">
+        <div class="header-section">
+          <figure class="header-logo">
             <a href="index.html">
               <img
                 src="Images/Design/Logo.png"
                 alt="Logo for Brønnøysund Community Science Museum"
               />
             </a>
-          </div>
+          </figure>
           <input type="checkbox" id="menu-checkbox" />
           <label for="menu-checkbox" class="hamburger-icon"
             ><img
@@ -57,7 +57,7 @@
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
-        </section>
+        </div>
       </div>
     </header>
     <main>
@@ -144,7 +144,7 @@
     </main>
     <footer>
       <div class="wrapper">
-        <div class="footer-content">
+        <section class="footer-content">
           <div class="footer1">
             <h2>Contact</h2>
             <div class="footer-contact-icon">
@@ -173,7 +173,7 @@
             <img src="Images/Icons/instagram-icon.png" alt="Instagram Icon" />
             <img src="Images/Icons/youtube-icon.png" alt="Youtube Icon" />
           </div>
-        </div>
+        </section>
         <p class="copy">©SP1 SL23</p>
       </div>
     </footer>
