--- a/getinvolved.html
+++ b/getinvolved.html
@@ -49,12 +49,14 @@
               alt="Hamburger-menu icon"
           /></label>
           <nav class="header-nav">
-            <a href="index.html">Home</a>
-            <a href="explore.html">Explore</a>
-            <a href="exhibition.html">Exhibitions</a>
-            <a href="events.html">Events</a>
-            <a href="visit.html">Visit</a>
-            <a href="getinvolved.html" id="active">Get Involved</a>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="explore.html">Explore</a></li>
+              <li><a href="exhibition.html">Exhibitions</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="visit.html">Visit</a></li>
+              <li><a href="getinvolved.html" id="active">Get Involved</a></li>
+            </ul>
           </nav>
         </div>
       </div>
@@ -159,7 +161,7 @@
     <footer>
       <div class="wrapper">
         <section class="footer-content">
-          <div class="footer1">
+          <div class="contact-info">
             <h2>Contact</h2>
             <div class="footer-contact-icon">
               <img src="Images/Icons/telephone-icon.png" alt="Telephone icon" />
@@ -174,7 +176,7 @@
               <p>Fictional Street 1, 8907 Brønnøysund</p>
             </div>
           </div>
-          <div class="footer2">
+          <div class="footer-logo">
             <a href="index.html">
               <img
                 src="Images/Design/Logo.png"
@@ -182,13 +184,13 @@
               />
             </a>
           </div>
-          <div class="footer3">
+          <div class="social-icons">
             <img src="Images/Icons/facebook-icon.png" alt="Facebook Icon" />
             <img src="Images/Icons/instagram-icon.png" alt="Instagram Icon" />
             <img src="Images/Icons/youtube-icon.png" alt="Youtube Icon" />
           </div>
         </section>
-        <p class="copy">©SP1 SL23</p>
+        <p class="copyright">©SP1 SL23</p>
       </div>
     </footer>
   </body>
