--- a/explore.html
+++ b/explore.html
@@ -50,12 +50,14 @@
               alt="Hamburger-menu icon"
           /></label>
           <nav class="header-nav">
-            <a href="index.html">Home</a>
-            <a href="explore.html" id="active">Explore</a>
-            <a href="exhibition.html">Exhibitions</a>
-            <a href="events.html">Events</a>
-            <a href="visit.html">Visit</a>
-            <a href="getinvolved.html">Get Involved</a>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="explore.html" id="active">Explore</a></li>
+              <li><a href="exhibition.html">Exhibitions</a></li>
+              <li><a href="events.html">Events</a></li>
+              <li><a href="visit.html">Visit</a></li>
+              <li><a href="getinvolved.html">Get Involved</a></li>
+            </ul>
           </nav>
         </div>
       </div>
@@ -70,7 +72,7 @@
       <h1>Explore</h1>
       <div class="wrapper">
         <section class="explore-row">
-          <figure class="explore1 image imagehover">
+          <figure class="for-kids image imagehover">
             <a href="#for-kids">
               <img
                 src="Images/Explore/explore_for_kids-min-min.png"
@@ -79,7 +81,7 @@
             </a>
             <h2>Kids</h2>
           </figure>
-          <figure class="explore2 image imagehover">
+          <figure class="for-teachers image imagehover">
             <a href="#for-teachers">
               <img
                 src="Images/Explore/explore_for_teachers-min-min.png"
@@ -88,7 +90,7 @@
             </a>
             <h2>Teachers</h2>
           </figure>
-          <figure class="explore3 image imagehover">
+          <figure class="for-researchers image imagehover">
             <a href="#for-researchers">
               <img
                 src="Images/Explore/explore_for_researchers-min-min.png"
@@ -262,7 +264,7 @@
     <footer>
       <div class="wrapper">
         <section class="footer-content">
-          <div class="footer1">
+          <div class="contact-info">
             <h2>Contact</h2>
             <div class="footer-contact-icon">
               <img src="Images/Icons/telephone-icon.png" alt="Telephone icon" />
@@ -277,7 +279,7 @@
               <p>Fictional Street 1, 8907 Brønnøysund</p>
             </div>
           </div>
-          <div class="footer2">
+          <div class="footer-logo">
             <a href="index.html">
               <img
                 src="Images/Design/Logo.png"
@@ -285,13 +287,13 @@
               />
             </a>
           </div>
-          <div class="footer3">
+          <div class="social-icons">
             <img src="Images/Icons/facebook-icon.png" alt="Facebook Icon" />
             <img src="Images/Icons/instagram-icon.png" alt="Instagram Icon" />
             <img src="Images/Icons/youtube-icon.png" alt="Youtube Icon" />
           </div>
         </section>
-        <p class="copy">©SP1 SL23</p>
+        <p class="copyright">©SP1 SL23</p>
       </div>
     </footer>
   </body>
