--- a/visit.html
+++ b/visit.html
@@ -69,18 +69,18 @@
           alt="Picture of the Torghatten mountain in Brønnlysund"
         />
       </div>
-      <h1>Visit</h1>
+      <h1 tabindex="0">Visit</h1>
       <div class="wrapper">
         <section class="iandt visit">
           <div class="textfield-blue location">
-            <h2>Location</h2>
+            <h2 tabindex="0">Location</h2>
             <p>The museum is located at:</p>
             <span>Fictional Street 1</span>
             <span>8907 Brønnøysund</span>
             <span>NO-Norway</span>
           </div>
-          <article class="textfield-blue admission">
-            <h2>Admission</h2>
+          <div class="textfield-blue admission">
+            <h2 tabindex="0">Admission</h2>
             <p>
               The entrance is free for all. There are guided tours of the museum
               that leave every hour. These tours are 70 NOK per person and
@@ -90,9 +90,9 @@
               If you would like to organise a guided tour for your group of 6 or
               more people, please contact us to arrange the tour.
             </p>
-          </article>
-          <article class="textfield-blue hours">
-            <h2>Hours</h2>
+          </div>
+          <div class="textfield-blue hours">
+            <h2 tabindex="0">Hours</h2>
             <span>Monday: Closed</span>
             <span>Tuesday: 10:00 - 16:00</span>
             <span>Wednesday: 10:00 - 16:00</span>
@@ -100,49 +100,55 @@
             <span>Friday: 10:00 - 19:00</span>
             <span>Saturday: 9:00 - 16:00</span>
             <span>Sunday: 9:00 - 13:00</span>
-          </article>
+          </div>
         </section>
-        <figure class="divider">
+        <figure tabindex="0" class="divider">
           <img
             src="Images/Design/Cafe-skille.png"
             alt="Divider with a dinosaur scull icon"
           />
         </figure>
         <section class="visit-iandt">
-          <article class="image-and-text">
+          <figure class="image-and-text">
             <h2>Accessibility</h2>
             <img
               src="Images/Visit/visit_accessibility-min.jpg"
               alt="Picture of a handicap space on the asphalt"
             />
-            <p>
-              The museum has wheelchair accessibility ramps. It also has audio
-              guides and braille display signs for the visually impaired.
-            </p>
-          </article>
-          <article class="image-and-text">
+            <figcaption>
+              <p>
+                The museum has wheelchair accessibility ramps. It also has audio
+                guides and braille display signs for the visually impaired.
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="image-and-text">
             <h2>Food and drink</h2>
             <img
               src="Images/Visit/visit_food-and-drink-min.jpg"
               alt="Picture of baked goods in the B.C.S.M. cafe"
             />
-            <p>
-              There is a café attached to the museum where you can get light
-              lunches, soft drinks, coffee, snacks and more.
-            </p>
-          </article>
-          <article class="image-and-text">
+            <figcaption>
+              <p>
+                There is a café attached to the museum where you can get light
+                lunches, soft drinks, coffee, snacks and more.
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="image-and-text">
             <h2>Shop</h2>
             <img
               src="Images/Visit/visit_shop-min.jpg"
               alt="Picture of the B.C.S.M. gift-shop window"
             />
-            <p>
-              Our shop offers a range of memorabilia from the museum as well as
-              great gifts and activity packs that allow you to continue to
-              explore science even after you've left the museum.
-            </p>
-          </article>
+            <figcaption>
+              <p>
+                Our shop offers a range of memorabilia from the museum as well
+                as great gifts and activity packs that allow you to continue to
+                explore science even after you've left the museum.
+              </p>
+            </figcaption>
+          </figure>
         </section>
         <figure class="divider dt" id="send-us-a-message">
           <img
