--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           alt="Picture of the childrens area of the brønnøysund community science museum"
         />
       </div>
-      <h1>Brønnøysund Community Science Museum</h1>
+      <h1 tabindex="0">Brønnøysund Community Science Museum</h1>
       <div class="wrapper">
         <section class="container">
           <figure class="image">
@@ -136,7 +136,7 @@
             <a href="visit.html" class="cta">Find out more</a>
           </div>
         </section>
-        <figure class="divider">
+        <figure tabindex="0" class="divider">
           <img
             src="Images/Design/Home-skille.png"
             alt="Divider for the home page"
