--- a/getinvolved.html
+++ b/getinvolved.html
@@ -68,18 +68,18 @@
           alt="Picture of glass windows in tall buildings taken from the ground up"
         />
       </div>
-      <h1>Get Involved</h1>
+      <h1 tabindex="0">Get Involved</h1>
       <section class="pink-background">
         <div class="wrapper">
-          <h2 class="center-text">Support</h2>
-          <div class="container">
+          <h2 tabindex="0" class="center-text">Support</h2>
+          <figure class="container">
             <figure class="image">
               <img
                 src="Images/Get-Involved/get-involved_support-min.jpg"
                 alt="Picture of a typewriter with the word Donation printed out"
               />
             </figure>
-            <article class="text">
+            <figcaption class="text">
               <p>
                 There are various ways you can support the museum. Donations are
                 very welcome and are an important way we keep this museum open
@@ -91,15 +91,15 @@
                 you think others would enjoy, please let us know by contacting
                 our Collections Department and they will be able to assist you.
               </p>
-            </article>
-          </div>
+            </figcaption>
+          </figure>
         </div>
       </section>
       <section class="site-background">
         <div class="wrapper">
-          <h2 class="center-text">Volunteer</h2>
-          <div class="container">
-            <article class="text">
+          <h2 tabindex="0" class="center-text">Volunteer</h2>
+          <figure class="container">
+            <figcaption class="text">
               <p>
                 A number of people volunteer their time and effort to keep the
                 displays in good order and ready for visitors to come and enjoy.
@@ -113,27 +113,27 @@
                 contact us if you'd like to find out more about how you can get
                 involved.
               </p>
-            </article>
+            </figcaption>
             <figure class="image">
               <img
                 src="Images/Get-Involved/get-involved_volunteer-min.jpg"
                 alt="Picture of a man standing in front of a dinosaur exhibition"
               />
             </figure>
-          </div>
+          </figure>
         </div>
       </section>
       <section class="pink-background">
         <div class="wrapper">
-          <h2 class="center-text">Internships</h2>
-          <div class="container">
+          <h2 tabindex="0" class="center-text">Internships</h2>
+          <figure class="container">
             <figure class="image">
               <img
                 src="Images/Get-Involved/get-involved_interns-min.jpg"
                 alt="Picture of 5 people sitting on a bench and smiling with their hands around each other"
               />
             </figure>
-            <article class="text">
+            <figcaption class="text">
               <p>
                 Are you interested in working in a museum? Do you enjoy the fun
                 and excitement of sharing the wonders of nature with people?
@@ -145,8 +145,8 @@
                 people who are passionate about science and sharing it with the
                 wider community.
               </p>
-            </article>
-          </div>
+            </figcaption>
+          </figure>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
