--- a/explore.html
+++ b/explore.html
@@ -69,7 +69,7 @@
           alt="Picture of the moon in different phases"
         />
       </div>
-      <h1>Explore</h1>
+      <h1 tabindex="0">Explore</h1>
       <div class="wrapper">
         <section class="explore-row">
           <figure class="for-kids image imagehover">
@@ -108,7 +108,7 @@
             <h3>Are you a young person looking to learn more about science?</h3>
             <h3>Come on down to our museum, there's plenty to see and do.</h3>
           </div>
-          <section class="iandt">
+          <div class="iandt">
             <figure class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids1-min.jpg"
@@ -137,8 +137,8 @@
               />
               <p>“Fake snake in the lake” Exhibition</p>
             </div>
-          </section>
-          <section class="text-container">
+          </div>
+          <div class="text-container">
             <div class="textbox">
               <p>
                 You can learn about Newtonian physics from our bumper swing, or
@@ -155,30 +155,34 @@
                 experiment with our team of experts.
               </p>
             </div>
-          </section>
+          </div>
           <section class="iandt">
-            <div class="image-and-text">
+            <figure class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids5-min.jpg"
                 alt="Picture of a teenager painting wearing VR-glasses"
               />
-              <p>
-                During the school holidays we run special holiday clubs where
-                you can join other children your age to go on a journey of
-                discovery.
-              </p>
-            </div>
-            <div class="image-and-text">
+              <figcaption>
+                <p>
+                  During the school holidays we run special holiday clubs where
+                  you can join other children your age to go on a journey of
+                  discovery.
+                </p>
+              </figcaption>
+            </figure>
+            <figure class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids6-min.jpg"
                 alt="The Earth-globe exhibit in the museums main hall"
               />
-              <p>
-                Each holiday we pick a new theme to explore. To find out more
-                about the holiday club and how you can join,
-                <a href="visit.html">send us a message</a>.
-              </p>
-            </div>
+              <figcaption>
+                <p>
+                  Each holiday we pick a new theme to explore. To find out more
+                  about the holiday club and how you can join,
+                  <a href="visit.html">send us a message</a>.
+                </p>
+              </figcaption>
+            </figure>
           </section>
         </div>
       </section>
@@ -199,7 +203,7 @@
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
           </figure>
-          <div class="textfield-grey">
+          <figcaption class="textfield-grey">
             <p>
               As a community-driven museum, we want to work with schools to
               create places of learning and exploring. Our team are on hand to
@@ -213,7 +217,7 @@
               facilities and to arrange a time to bring your students through
               for a visit.
             </p>
-          </div>
+          </figcaption>
         </section>
       </div>
       <figure class="divider" id="for-researchers">
@@ -227,14 +231,14 @@
           <div class="center-text">
             <h2>For researchers</h2>
           </div>
-          <div class="iandt">
+          <figure class="iandt">
             <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers1-min.jpg"
                 alt="Picture of a human model with internal organs showing"
               />
             </figure>
-            <article class="text">
+            <figcaption class="text">
               <p>
                 Are you looking to get involved with our team of researchers and
                 academics? Our museum offers various ways for you to use our
@@ -242,14 +246,14 @@
                 laboratory space, and a working relationship with a number of
                 universities around the country.
               </p>
-            </article>
+            </figcaption>
             <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers2-min.jpg"
                 alt="Picture of a model of a human heart"
               />
             </figure>
-          </div>
+          </figure>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
