--- a/exhibition.html
+++ b/exhibition.html
@@ -69,7 +69,7 @@
           alt="Picture of the papers exhibitions in Brønnøysund community science museum"
         />
       </div>
-      <h1>Exhibition Spaces</h1>
+      <h1 tabindex="0">Exhibition Spaces</h1>
       <section class="link-bar">
         <div class="wrapper">
           <nav class="exhibition-links">
@@ -90,14 +90,14 @@
           />
           <h2>Cosmology</h2>
         </figure>
-        <section class="container iandt">
+        <figure class="container iandt">
           <figure class="image">
             <img
               src="Images/Exhibition/exhibitions_cosmology-min.jpg"
               alt="Picture showing the night sky with a swirl of stars"
             />
           </figure>
-          <article class="textfield-dark-green cost">
+          <figcaption class="textfield-dark-green cost">
             <p>
               Explore the wonders of our cosmos. Our fantastic exhibition, ‘The
               Sky Above Us’, explores the night sky and what we can see and know
@@ -110,8 +110,8 @@
               traders, to Galileo's telescope, to the latest exploration of the
               planets in our solar system.
             </p>
-          </article>
-        </section>
+          </figcaption>
+        </figure>
         <figure class="divider dt">
           <img
             src="Images/Design/Evolution-skille.png"
@@ -120,8 +120,8 @@
           />
           <h2>Evolution</h2>
         </figure>
-        <section class="container iandt">
-          <article class="textfield-dark-green evot">
+        <figure class="container iandt">
+          <div class="textfield-dark-green evot">
             <p>
               For centuries, philosophers and scientists have wrestled with the
               question of our origins. Where do we come from and how did we get
@@ -133,17 +133,17 @@
               alt="Icon showing evolution"
               class="evot-icon"
             />
-          </article>
-          <article class="textfield-dark-green evot">
+          </div>
+          <div class="textfield-dark-green evot">
             <p>
               Discover the origins of life on this planet and how the species we
               know today have evolved our time. You can also take some time to
               meet a few of the creatures who didn't survive, including our
               Woolly Mammoth, the Dodos, and a number of dinosaurs too.
             </p>
-          </article>
-        </section>
-        <section class="iandt">
+          </div>
+        </figure>
+        <figure class="iandt">
           <figure class="img-and-text image">
             <img
               src="Images/Exhibition/exhibition_evolution1-min.jpg"
@@ -165,7 +165,7 @@
             />
             <p>"Prehistoric marine life "</p>
           </figure>
-        </section>
+        </figure>
         <figure class="divider dt">
           <img
             src="Images/Design/Biology-Skille.png"
@@ -174,19 +174,21 @@
           />
           <h2>Biology and Medicine</h2>
         </figure>
-        <section class="iandt">
-          <article class="image-and-text">
+        <div class="iandt">
+          <figure class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_biology-and-medicine1-min.jpg"
               alt="Picture of nautical biology"
             />
-            <p>
-              From micro-organisms to the human body, major breakthroughs in
-              biology are offering us unique insights into the great wonders of
-              the tiny world.
-            </p>
-          </article>
-          <article class="image-and-text">
+            <figcaption>
+              <p>
+                From micro-organisms to the human body, major breakthroughs in
+                biology are offering us unique insights into the great wonders
+                of the tiny world.
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_biology-and-medicine2-min.jpg"
               alt="Picture of a man looking into a microscope"
@@ -199,8 +201,8 @@
               breakthroughs including the discovery of penicillin and the first
               heart transplant.
             </p>
-          </article>
-          <article class="image-and-text">
+          </figure>
+          <figure class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_biology-and-medicine3-min.jpg"
               alt="Picture of a microscopical animal"
@@ -210,8 +212,8 @@
               the lab, but also from observing animals in the wild. Often our
               fellow creatures have beat us to it.
             </p>
-          </article>
-        </section>
+          </figure>
+        </div>
         <figure class="divider dt">
           <img
             src="Images/Design/Robotics-skille.png"
@@ -220,22 +222,22 @@
           />
           <h2>Robotics and AI</h2>
         </figure>
-        <section class="container iandt">
+        <figure class="container iandt">
           <figure class="image">
             <img
               src="Images/Exhibition/exhibition_robots-and-ai-min.jpg"
               alt="Picture of a kid learning about robotics production"
             />
           </figure>
-          <article class="textfield-dark-green robt">
+          <figcaption class="textfield-dark-green robt">
             <p>
               The information revolution is here and robotics and artificial
               intelligence are the science of the future. From useful home
               applications of AI to industrial uses of robotics, the future is
               here. You can even say hello and shake the hand of Rob the Robot.
             </p>
-          </article>
-        </section>
+          </figcaption>
+        </figure>
         <figure class="divider dt">
           <img
             src="Images/Design/Ecology-skille.png"
@@ -244,32 +246,36 @@
           />
           <h2>Ecology</h2>
         </figure>
-        <section class="iandt ecology">
-          <article class="image-and-text">
+        <div class="iandt ecology">
+          <figure class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_ecology1-min.jpg"
               alt="Picture of windmills on a snow covered mountain"
             />
-            <p>
-              As we learn more and more of the impact humans are having on the
-              planet, the more important it becomes that scientists explore how
-              to create a sustainable future not just for humans but for the
-              whole planet.
-            </p>
-          </article>
-          <article class="image-and-text">
+            <figcaption>
+              <p>
+                As we learn more and more of the impact humans are having on the
+                planet, the more important it becomes that scientists explore
+                how to create a sustainable future not just for humans but for
+                the whole planet.
+              </p>
+            </figcaption>
+          </figure>
+          <figure class="image-and-text">
             <img
               src="Images/Exhibition/exhibition_ecology2-min.jpg"
               alt="Art in flowers spelling out: Earth Day Everyday "
             />
-            <p>
-              In our ecology section of the museum, we unpack the dangers we
-              currently face including global warming, extinction of species,
-              and pollution. But we also focus on the positive ways we can all
-              contribute to a brighter future.
-            </p>
-          </article>
-        </section>
+            <figcaption>
+              <p>
+                In our ecology section of the museum, we unpack the dangers we
+                currently face including global warming, extinction of species,
+                and pollution. But we also focus on the positive ways we can all
+                contribute to a brighter future.
+              </p>
+            </figcaption>
+          </figure>
+        </div>
       </div>
       <figure class="back-to-top-button imagehover">
         <a href="#back-to-top">
