--- a/events.html
+++ b/events.html
@@ -69,17 +69,17 @@
           alt="Picture of an old drawing off science equipment"
         />
       </div>
-      <h1>Special Events</h1>
+      <h1 tabindex="0">Special Events</h1>
       <section class="green-background">
         <div class="wrapper">
-          <div class="container">
+          <figure class="container">
             <figure class="image">
               <img
                 src="Images/Events/events-professor-min.jpg"
                 alt="Picture of professor of aeronautics Prof Sheila Widnall"
               />
             </figure>
-            <article class="text">
+            <figcaption class="text">
               <h2 class="events-h2">Visiting Professor of Aeronautics</h2>
               <p>
                 It is our pleasure to announce that Prof Sheila Widnall from the
@@ -87,14 +87,14 @@
                 lectures on the development of aeronautics and where the future
                 lies in this exciting ‘space’.
               </p>
-            </article>
-          </div>
+            </figcaption>
+          </figure>
         </div>
       </section>
       <section class="site-background">
         <div class="wrapper">
-          <div class="container">
-            <article class="text">
+          <figure class="container">
+            <figcaption class="text">
               <h2 class="events-h2">Night in the Museum</h2>
               <p>
                 Get your family together for an exciting night in the museum as
@@ -102,26 +102,26 @@
                 own sleeping bag and get ready to rough it as we go exploring
                 the wonders of science.
               </p>
-            </article>
+            </figcaption>
             <figure class="image">
               <img
                 src="Images/Events/events_night-at-the-museum-min.png"
                 alt="Picture of a man sitting in a museum hall"
               />
             </figure>
-          </div>
+          </figure>
         </div>
       </section>
       <section class="green-background">
         <div class="wrapper">
-          <div class="container">
+          <figure class="container">
             <figure class="image">
               <img
                 src="Images/Events/events-lightning-min.jpg"
                 alt="Picture of a ball of lightning"
               />
             </figure>
-            <article class="text">
+            <figcaption class="text">
               <h2 class="events-h2">Energetica Exhibition on Loan</h2>
               <p>
                 On loan from the NEMO Science Museum in Amsterdam, the
@@ -131,8 +131,8 @@
                 powering lighting, to ‘Wind Island’ that shows how turbines are
                 able to use and control wind to create power.
               </p>
-            </article>
-          </div>
+            </figcaption>
+          </figure>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
