--- a/exhibition.html
+++ b/exhibition.html
@@ -70,7 +70,7 @@
         />
       </div>
       <h1 tabindex="0">Exhibition Spaces</h1>
-      <section class="link-bar">
+      <div class="link-bar">
         <div class="wrapper">
           <nav class="exhibition-links">
             <a href="#cosmology">Cosmology</a>
@@ -80,7 +80,7 @@
             <a href="#ecology">Ecology</a>
           </nav>
         </div>
-      </section>
+      </div>
       <div class="wrapper">
         <figure class="divider dt">
           <img
