--- a/explore.html
+++ b/explore.html
@@ -156,7 +156,7 @@
               </p>
             </div>
           </div>
-          <section class="iandt">
+          <figure class="iandt">
             <figure class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids5-min.jpg"
@@ -183,7 +183,7 @@
                 </p>
               </figcaption>
             </figure>
-          </section>
+          </figure>
         </div>
       </section>
       <figure class="divider" id="for-teachers">
@@ -196,7 +196,7 @@
         <h2>For teachers</h2>
       </div>
       <div class="wrapper">
-        <section class="container">
+        <figure class="container">
           <figure class="image">
             <img
               src="Images/Explore/explore_for_teachers1-min.jpg"
@@ -218,7 +218,7 @@
               for a visit.
             </p>
           </figcaption>
-        </section>
+        </figure>
       </div>
       <figure class="divider" id="for-researchers">
         <img
