--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <h1 tabindex="0">Brønnøysund Community Science Museum</h1>
       <div class="wrapper">
-        <section class="container">
+        <figure class="container">
           <figure class="image">
             <img
               src="Images/Home/home_museum-min.jpg"
@@ -92,7 +92,7 @@
               us.
             </p>
           </div>
-        </section>
+        </figure>
         <h2 class="h2-center">"Explore Together"</h2>
         <section class="link-row imagehover">
           <div class="link">
@@ -146,14 +146,14 @@
           Come join us at the Community Science Museum where we are committed to
           making science accessible to all.
         </h3>
-        <section class="container">
+        <figure class="container">
           <figure class="image">
             <img
               src="Images/Home/home_boy-in-museum-min.jpg"
               alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
             />
           </figure>
-          <div class="textfield-purple">
+          <figcaption class="textfield-purple">
             <p>
               We believe science should not be confined to the textbook, but
               brought to life through exhibits. This is why we have over 1000
@@ -163,8 +163,8 @@
               dinosaur exhibits - they only come to life at night when
               everyone's gone home).
             </p>
-          </div>
-        </section>
+          </figcaption>
+        </figure>
         <figure class="back-to-top-button imagehover">
           <a href="#back-to-top">
             <img
