--- a/visit.html
+++ b/visit.html
@@ -162,7 +162,7 @@
         </h3>
         <form method="GET">
           <div class="contact-form">
-            <section class="fieldset">
+            <div class="fieldset">
               <label for="name">Name</label>
               <input
                 type="text"
@@ -216,8 +216,8 @@
                 class="form-input newsletter"
                 checked
               />
-            </section>
-            <section class="fieldset">
+            </div>
+            <div class="fieldset">
               <label for="message">Write us a message</label>
               <textarea
                 id="message"
@@ -226,7 +226,7 @@
                 rows="10"
                 class="form-input"
               ></textarea>
-            </section>
+            </div>
           </div>
           <div class="form-button">
             <input type="submit" value="Submit" class="cta form-cta" />
