--- a/explore.html
+++ b/explore.html
@@ -231,7 +231,7 @@
           <div class="center-text">
             <h2>For researchers</h2>
           </div>
-          <figure class="iandt">
+          <div class="iandt">
             <figure class="image">
               <img
                 src="Images/Explore/explore_for_researchers1-min.jpg"
@@ -253,7 +253,7 @@
                 alt="Picture of a model of a human heart"
               />
             </figure>
-          </figure>
+          </div>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
