--- a/explore.html
+++ b/explore.html
@@ -231,13 +231,13 @@
           <div class="center-text">
             <h2>For researchers</h2>
           </div>
-          <div class="iandt">
-            <figure class="image">
+          <figure class="iandt">
+            <div class="image">
               <img
                 src="Images/Explore/explore_for_researchers1-min.jpg"
                 alt="Picture of a human model with internal organs showing"
               />
-            </figure>
+            </div>
             <figcaption class="text">
               <p>
                 Are you looking to get involved with our team of researchers and
@@ -247,13 +247,13 @@
                 universities around the country.
               </p>
             </figcaption>
-            <figure class="image">
+            <div class="image">
               <img
                 src="Images/Explore/explore_for_researchers2-min.jpg"
                 alt="Picture of a model of a human heart"
               />
-            </figure>
-          </div>
+            </div>
+          </figure>
         </div>
       </section>
       <figure class="back-to-top-button imagehover">
